--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,25 @@
     "NODE_ENV": "production"
   },
   "functions": {
-    "app/api/**/*.ts": {
+    "app/api/chat/route.ts": {
+      "maxDuration": 120
+    },
+    "app/api/upload/route.ts": {
+      "maxDuration": 60
+    },
+    "app/api/chat/export/route.ts": {
+      "maxDuration": 60
+    },
+    "app/api/chat/thread/route.ts": {
+      "maxDuration": 30
+    },
+    "app/api/chat/mensajes/route.ts": {
+      "maxDuration": 30
+    },
+    "app/api/chat/conversacion/[id]/route.ts": {
+      "maxDuration": 30
+    },
+    "app/api/auth/verify-email/route.ts": {
       "maxDuration": 30
     }
   }
