fix: Crear SidebarWrapper y ajustar configuraciÃ³n para resolver error de manifest en Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
   "env": {
     "NODE_ENV": "production"
   },
+  "build": {
+    "env": {
+      "NEXT_TELEMETRY_DISABLED": "1"
+    }
+  },
   "functions": {
     "app/api/chat/route.ts": {
       "maxDuration": 120
