--- a/vercel.json
+++ b/vercel.json
@@ -14,13 +14,16 @@
   },
   "functions": {
     "app/api/chat/route.ts": {
-      "maxDuration": 120
+      "maxDuration": 120,
+      "memory": 1024
     },
     "app/api/upload/route.ts": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "memory": 1024
     },
     "app/api/chat/export/route.ts": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "memory": 1024
     },
     "app/api/chat/thread/route.ts": {
       "maxDuration": 30
